--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #black;
 }
 
 .App-link {
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.flex-container {
+  display: flex;
+  align-items: flex-start;
+  height: 60px;
+  flex-direction: column;
+  text-align: right;
+}
+
+.flex-container input{
+  width: 125px;
+}
+
+
